--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -14,8 +14,12 @@
         img {
             display: block;
             margin: 8px auto;
-            width: 24px;
+            width: 40px;
             height: auto;
+
+            &.sub-logo {
+                width: 50px;
+            }
         }
     }
 
